--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,230 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  background: #f0f0f0;
+  box-shadow: 2px 2px 3px 0px black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul li {
+  display: block;
+  position: relative;
+  float: right;
+  background: #f1f1f1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+li ul {
+  display: none;
+}
+ul p{
+  font-size: 30px;
+}
+ul li a {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 1em;
+  text-decoration: none;
+  white-space: nowrap;
+  color: #111;
+}
+
+ul li a:hover {
+  background: #2c3e50;
+}
+li:hover > ul {
+  display: block;
+  position: absolute;
+}
+
+li:hover li {
+  float: none;
+}
+
+li:hover a {
+  background: lightgrey;
+}
+
+li:hover li a:hover {
+  background: grey;
+}
+
+.main-navigation li ul li {
+  
+  border-top: 0;
+}
+
+ul ul ul {
+  right: 100%;
+  top: 0;
+}
+ul:before,
+ul:after {
+  content: " "; /* 1 */
+  display: table; /* 2 */
+}
+
+ul:after {
+  clear: both;
+}
+
+/* sidenav */
+.sidenav {
+  height: 140%;
+  width: 360px;
+  position: absolute;
+  z-index: 1;
+  top: 12%;
+  left: 0;
+  background-color: grey;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+.sidenav a {
+  padding: 6px 8px 6px 46px;
+  text-decoration: none;
+  font-size: 25px;
   color: white;
+  display: block;
 }
 
-.App-link {
-  color: #61dafb;
+.sidenav a:hover {
+  background-color: #f1f1f1;
+  color: #111;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main {
+  margin-left: 160px; /* Same as the width of the sidenav */
+  font-size: 28px; /* Increased text to enable scrolling */
+  padding: 0px 10px;
 }
+
+/* @media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;} */
+/* ender */
+
+.row {
+  display: flex;
+  float: right;
+  width: 76.5%;
+}
+
+.rows {
+  display: flex;
+  float: right;
+  width: 76.5%;
+}
+ .rows div{
+   width: 25%;
+ }
+
+.row div {
+  width: 76.5%;
+}
+
+.noMargin {
+  margin: 0px;
+  text-align: left;
+  font-size: 40px;
+}
+.first {
+  padding-left: 45px;
+  padding-top: 10px;
+  margin: 0px;
+  text-align: center;
+  font-size: 20px;
+ 
+}
+
+.one a{
+  color: black;
+  padding-left: 25px;
+}
+.two a{
+  color: black;
+  padding-left: 25px;
+}
+
+.three a{
+  color: black;
+  padding-left: 25px;
+}
+
+
+.four a {
+  color: black;
+  padding-left: 25px;
+}
+
+.one {
+  padding-bottom: 150px;
+  margin: 50px;
+  background-color:white;
+  padding-left: 10px;
+  -moz-box-shadow: -2px 13px 36px 3px rgba(0, 0, 0, 0.75);
+  box-shadow: -2px 13px 36px 3px rgba(0, 0, 0, 0.75);
+  border-radius: 15px 15px 15px ;
+}
+.session{
+  margin: 50px;
+  padding: 35px;
+  
+  margin: 50px;
+  background-color:white;
+ 
+  border-radius: 15px 15px 15px ;
+}
+.practice{
+  margin: 50px;
+  padding: 35px;
+ 
+  margin: 50px;
+  background-color:white;
+ 
+  border-radius: 15px 15px 15px ;
+}
+.downloads{
+  margin: 50px;
+  padding: 35px;
+ 
+  margin: 50px;
+  background-color:white;
+ 
+  border-radius: 15px 15px 15px ;
+}
+.ask{
+  margin: 50px;
+  padding: 35px;
+ 
+  margin: 50px;
+  background-color:white;
+ 
+  border-radius: 15px 15px 15px ;
+}
+
+.two {
+  padding-bottom: 150px;
+  margin: 50px;
+  background-color: white;
+  -moz-box-shadow: -2px 13px 36px 3px rgba(0, 0, 0, 0.75);
+  box-shadow: -2px 13px 36px 3px rgba(0, 0, 0, 0.75);
+  border-radius: 15px 15px 15px ;
+}
+
+.three {
+  width: 100%;
+  padding-bottom: 150px;
+  margin-left: 150px;
+  background-color: white;
+  -moz-box-shadow: -2px 13px 36px 3px rgba(0, 0, 0, 0.75);
+  box-shadow: -2px 13px 36px 3px rgba(0, 0, 0, 0.75);
+  border-radius: 15px 15px 15px ;
+}
+
+
